# tiny_matrix_mult_demonstration

./: README.md  main_numpy.py  main_pure.cpp  main_pure.py  main_xtensor.cpp  meson.build
